[gd_scene load_steps=2 format=2]

[ext_resource path="res://kitchen_scene/clickable/clickable_sprite.gd" type="Script" id=1]

[node name="ClickableSprite" type="TextureButton"]
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_ClickableSprite_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableSprite_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ClickableSprite_pressed"]
